# Check-Author-Associations-Service

./: README.md
.github/workflows/: rust.yml
check-author-associations-service-app/: .gitignore  cdk.json  package-lock.json  package.json
check-author-associations-service-app/lib/: check-author-associations-service-app-stack.ts
check-author-associations-service-app/lib/lambdas/checkAssociations/: Cargo.toml  build.sh
check-author-associations-service-app/lib/lambdas/checkAssociations/src/: main.rs
check-author-associations-service-app/test/: check-author-associations-service-app.test.ts
